# pycopg

./: .gitignore  .readthedocs.yaml  AUDIT.md  CHANGELOG.md  LICENSE  MIGRATION.md  Makefile  README.md  async_database.py  config.py  pyproject.toml  vulture_whitelist.py
.github/workflows/: publish.yml  tests.yml
.planning/: AUDIT-2026-06-06.md  FUTURE-MILESTONES.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v0.4.0-MILESTONE-AUDIT.md  v0.6.0-SCOPE.md  v0.9.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v0.3.0-MILESTONE-AUDIT.md  v0.3.0-REQUIREMENTS.md  v0.3.0-ROADMAP.md  v0.4.0-MILESTONE-AUDIT.md  v0.4.0-MILESTONE.md  v0.4.0-REQUIREMENTS.md  v0.4.0-ROADMAP.md  v0.5.0-REQUIREMENTS.md  v0.6.0-MILESTONE-AUDIT.md  v0.6.0-REQUIREMENTS.md  v0.6.0-ROADMAP.md  v0.7.0-REQUIREMENTS.md  v0.8.0-REQUIREMENTS.md  v0.9.0-REQUIREMENTS.md
.planning/phases/01-bug-fixes-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-asyncdatabase-dataframe-parity/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-async-admin-backup-parity/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-async-extensions-parity/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/05-resilience-configuration/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-RESEARCH.md  05-VERIFICATION.md
.planning/phases/06-test-coverage/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-RESEARCH.md  06-VERIFICATION.md
.planning/phases/07-documentation-release/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-RESEARCH.md  07-VERIFICATION.md
.planning/phases/08-spatial-helpers/: 08-DESIGN.md
.planning/phases/09-migration-uv-outillage-projet/: 09-01-PLAN.md  09-01-SUMMARY.md  09-02-PLAN.md  09-02-SUMMARY.md  09-03-PLAN.md  09-03-SUMMARY.md  09-04-PLAN.md  09-04-SUMMARY.md  09-CONTEXT.md  09-DISCUSSION-LOG.md  09-PATTERNS.md  09-RESEARCH.md  09-REVIEW-FIX.md  09-REVIEW.md  09-VALIDATION.md  09-VERIFICATION.md  deferred-items.md
.planning/phases/10-s-curit-r-siduelle-robustesse/: 10-01-PLAN.md  10-01-SUMMARY.md  10-02-PLAN.md  10-02-SUMMARY.md  10-03-PLAN.md  10-03-SUMMARY.md  10-04-PLAN.md  10-04-SUMMARY.md  10-05-PLAN.md  10-05-SUMMARY.md  10-AUDIT-D01.md  10-CONTEXT.md  10-DISCUSSION-LOG.md  10-REVIEW-FIX.md  10-REVIEW.md  10-SECURITY.md  10-VERIFICATION.md
.planning/phases/11-parit-sync-async-compl-te/: 11-01-PLAN.md  11-01-SUMMARY.md  11-02-PLAN.md  11-02-SUMMARY.md  11-03-PLAN.md  11-03-SUMMARY.md  11-04-PLAN.md  11-04-SUMMARY.md  11-05-PLAN.md  11-05-SUMMARY.md  11-06-PLAN.md  11-06-SUMMARY.md  11-07-PLAN.md  11-07-SUMMARY.md  11-ARTIFACTS.md  11-CONTEXT.md  11-DISCUSSION-LOG.md  11-REVIEW.md  11-SECURITY.md  11-UAT.md  11-VALIDATION.md  11-VERIFICATION.md
.planning/phases/12-refactoring-brancher-les-abstractions/: 12-01-PLAN.md  12-01-SUMMARY.md  12-02-PLAN.md  12-02-SUMMARY.md  12-03-PLAN.md  12-03-SUMMARY.md  12-04-PLAN.md  12-04-SUMMARY.md  12-CONTEXT.md  12-DISCUSSION-LOG.md  12-PATTERNS.md  12-VERIFICATION.md
.planning/phases/13-qualit-documentaire-docstrings-numpydoc-interrogate/: 13-01-PLAN.md  13-01-SUMMARY.md  13-02-PLAN.md  13-02-SUMMARY.md  13-03-PLAN.md  13-03-SUMMARY.md  13-04-PLAN.md  13-04-SUMMARY.md  13-05-PLAN.md  13-05-SUMMARY.md  13-06-PLAN.md  13-06-SUMMARY.md  13-CONTEXT.md  13-DISCUSSION-LOG.md  13-PATTERNS.md  13-RESEARCH.md  13-REVIEW.md  13-VALIDATION.md  13-VERIFICATION.md
.planning/phases/14-spatial-helpers-phase-8-r-alis-e/: 14-01-PLAN.md  14-01-SUMMARY.md  14-02-PLAN.md  14-02-SUMMARY.md  14-03-PLAN.md  14-03-SUMMARY.md  14-04-PLAN.md  14-04-SUMMARY.md  14-CONTEXT.md  14-DISCUSSION-LOG.md  (+6 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
benchmarks/: README.md  __init__.py  __main__.py
docs/: Makefile  api-autodoc.md  api-reference.md  async-database.md  backup-restore.md  conf.py  configuration.md  connection-pooling.md  database.md  etl.md  getting-started.md  index.md  migrations.md  postgis.md  requirements.txt  roles-permissions.md  spatial.md  timescaledb.md
pycopg/: __init__.py  admin.py  aliases.py  async_database.py  backup.py  base.py  config.py  database.py  etl.py  exceptions.py  maint.py  migrations.py  pool.py  queries.py  schema.py  spatial.py  timescale.py  utils.py
tests/: __init__.py  conftest.py  setup_test_db.py  test_admin_aliases.py  test_alias_removal.py  test_async_database.py  test_audit_37_fixes.py  test_backup_aliases.py  test_base.py  test_config.py  test_database.py  test_database_integration.py  test_etl.py  test_etl_accessor.py  test_exceptions.py  test_integration.py  test_maint_aliases.py  test_migration_atomicity.py  test_migration_edge_cases.py  test_migrations.py  test_parity.py  test_pool.py  test_pool_commit.py  test_pool_stress.py  test_postgis_errors.py  test_schema_aliases.py  test_session_edge_cases.py  test_session_leak.py  test_spatial.py  test_spatial_aliases.py  test_sql_injection.py  test_subprocess_env.py  test_timescale.py  test_timescale_aliases.py  test_utils.py  test_version.py
(+323 files in other folders)
