[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pycopg"
version = "0.8.0"
description = "High-level Python API for PostgreSQL/PostGIS/TimescaleDB"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Loc Cosnier", email = "loc.cosnier@pm.me" }
]
keywords = [
    "postgresql",
    "postgis",
    "timescaledb",
    "database",
    "sql",
    "psycopg",
    "pandas",
    "geopandas",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: GIS",
]
requires-python = ">=3.11"
dependencies = [
    "psycopg>=3.1.0",
    "psycopg_pool>=3.2.0",
    "sqlalchemy>=2.0.0",
    "pandas>=2.0.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dotenv = [
    "python-dotenv>=1.0.0",
]
geo = [
    "geopandas>=0.14.0",
    "geoalchemy2>=0.14.0",
    "shapely>=2.0.0",
]
timescale = []  # No additional deps, just PostgreSQL extension
all = [
    "python-dotenv>=1.0.0",
    "geopandas>=0.14.0",
    "geoalchemy2>=0.14.0",
    "shapely>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "interrogate>=1.7.0",
    "mypy>=2.1.0",
]

[project.urls]
Homepage = "https://github.com/alkimya/pycopg"
Documentation = "https://pycopg.readthedocs.io"
Repository = "https://github.com/alkimya/pycopg"
Issues = "https://github.com/alkimya/pycopg/issues"

[tool.hatch.build.targets.wheel]
packages = ["pycopg"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=pycopg --cov-report=term-missing --cov-report=html --cov-fail-under=94"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["pycopg"]
omit = ["*/tests/*", "*/venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-module = false
ignore-property-decorators = false
fail-under = 95
exclude = ["tests", "docs", "setup.py"]
verbose = 0
quiet = false
color = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = false
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "sqlalchemy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "psycopg.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "psycopg_pool.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "geopandas.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "geoalchemy2.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "shapely.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tenacity.*"
ignore_missing_imports = true
